[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge assets/music/smb_gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://dodge assets/music/smb_overworld_theme.mp3" type="AudioStream" id=6]
[ext_resource path="res://dodge assets/music/smb_mariodie.wav" type="AudioStream" id=7]
[ext_resource path="res://dodge assets/music/smb_stomp.wav" type="AudioStream" id=8]
[ext_resource path="res://PowerUp.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.737255, 0.152941, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 39.8198, 45.8302 )

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 16.0
autoplay = true

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="EnemyDefeatedSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="CharacterDeadMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PowerUp" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 153.5, 146 )

[node name="PowerUpPosition" type="Position2D" parent="."]
position = Vector2( 480, 900 )

[node name="PowerUpTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_shape_entered" from="Player" to="." method="_on_Player_body_shape_entered"]
[connection signal="death" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="finished" from="CharacterDeadMusic" to="." method="_on_CharacterDeadMusic_finished"]
[connection signal="body_entered" from="PowerUp" to="." method="_on_PowerUp_body_entered"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
